--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
     "serve": "vite preview",
-    "lint": "eslint ./src/**/*.{vue,ts} --fix",
+    "lint": "eslint ./src/**/*.{vue,ts,tsx} --fix",
     "prepare": "husky install"
   },
   "dependencies": {
