路径别名配置

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,11 @@
     "esModuleInterop": true,
     "isolatedModules": true,
     "types": ["vite/client"],
-    "lib": ["esnext", "dom"]
+    "lib": ["esnext", "dom"],
+    "baseUrl": "./",
+    "paths": {
+      "@/*": ["src/*"]
+    }
   },
   "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"]
 }
