--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "prebuild": "node ./misc/checkV.js"
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "lodash": "^4.17.21",
     "pinia": "^2.0.4",
     "vue": "^3.2.16",
     "vue-router": "^4.0.12"
   },
   "devDependencies": {
+    "@types/node": "^16.11.10",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "@vitejs/plugin-vue": "^1.9.3",
